# gcalcli

./: Dockerfile  Makefile  gcalcli  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
docs/: README.md
gcalcli/: gcal.py
