[tool.poetry]
name = "gcalcli"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.8.2"
google-api-python-client = ">=1.4"
httplib2 = "^0.22.0"
oauth2client = "^4.1.3"
parsedatetime = "^2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
