[tool.poetry]
name = "gcalcli"
version = "4.3.0"
description = "Google Calendar Command Line Interface"
authors = [
  "Eric Davis <edavis@insanum.com>",
  "Brian Hartvigsen <brian.andrew@brianandjenny.com>",
  "Joshua Crowgey <jcrowgey@uw.edu>",
  "Kevin Yokley <kyokley2@gmail.com>",
]
maintainers = [
  "Joshua Crowgey <jcrowgey@uw.edu>",
]
readme = "README.md"
license = "MIT"
packages = [ { include = "gcalcli" } ]
include = [
  "ChangeLog",
  "LICENSE",
  "docs/**/*",
]
repository = "https://github.com/insanum/gcalcli"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
gcalcli = "gcalcli.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.8.2"
google-api-python-client = ">=1.4"
google-auth-oauthlib = ">=0.7.0"
httplib2 = "^0.22.0"
oauth2client = "^4.1.3"
parsedatetime = "^2.6"
vobject = { version = "*", optional = true }

[tool.poetry.extras]
vobject = ["vobject"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "google"
force_single_line = false
float_to_top = true
combine_star = true
py_version = 3

[[tool.mypy.overrides]]
ignore_missing_imports = true
